split context into parts, added zeroing state when leaving add workouts component

--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
-Cut Context into parts
 Change display of date
-Reset components when leave
+Add info to add exercises or workouts when empty storage
+Check if all loops work
 
 Later On:
 Add Custom Exercises
