--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 Change display of date
 Add info to add exercises or workouts when empty storage
 Check if all loops work
+Fix styling (especially width of elements)
+
 
 Later On:
 Add Custom Exercises
