fixed going back on addWorkout, fixed list styling so it shows component

--- a/todo
+++ b/todo
@@ -1,8 +1,6 @@
 Change display of date
 Add info to add exercises or workouts when empty storage
-Check if all loops work
-Fix styling (especially width of elements)
-
+Add Notes
 
 Later On:
 Add Custom Exercises
